<resources>
    <string name="app_name">MovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="read_more">Read More</string>
    <string name="icon_bookmark">icon bookmark</string>
    <string name="poster_image">poster image</string>
    <string name="release_date">Release Date</string>
    <string name="movie_db_app">Movie DB App</string>
    <string name="find_your_movies">Find your movies</string>
    <string name="search_here">Search Here</string>
    <string name="icon_image">icon image</string>
    <string name="categories">Categories</string>
    <string name="load_more">Load More</string>
    <string name="watch_list">Watch List</string>
    <string name="icon_watch_list">icon watch list</string>
    <string name="background_movie">background movie</string>
    <string name="overviews">Overviews:</string>
    <string name="average_rating">Average Rating:</string>
    <string name="rate_count">Rate Count</string>
    <string name="popularity">Popularity:</string>
    <string name="profile_image">profile image</string>
    <string name="error_when_fetching_api">Error when fetching API</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="_0_0">0.0</string>
    <string name="rate_the_movie">Rate the Movie</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="your_watch_list">Your Watch List</string>
    <string name="you_don_t_have_any_watch_list">You don\'t have any watch list</string>
    <string name="the_rating_should_be_n0_0_value_10"><![CDATA[Rating Value should be\n0.0 < value <= 10]]></string>
</resources>