<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius_16dp_dark"
    android:backgroundTint="@color/dark_primary"
    android:orientation="vertical"
    android:padding="22dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/rate_the_movie"
        android:textColor="@color/light_primary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etRate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_radius_16dp_dark"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_horizontal"
        android:hint="@string/_0_0"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/light_primary"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal"
        android:text="@string/the_rating_should_be_n0_0_value_10"
        android:textColor="@color/green_accent"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_16dp_dark"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/green_accent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSubmit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="22dp"
            android:layout_weight="1"
            android:background="@drawable/bg_radius_16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/dark_primary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>