<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="29dp"
        android:paddingTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAppTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/movie_db_app"
                android:textColor="@color/light_primary"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/find_your_movies"
                android:textColor="@color/light_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppTitle" />

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="23dp"
                android:background="@drawable/bg_radius_16dp"
                android:backgroundTint="@color/dark_secondary"
                android:hint="@string/search_here"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingHorizontal="19dp"
                android:paddingVertical="10dp"
                android:textColor="@color/light_primary"
                app:layout_constraintBottom_toBottomOf="@id/ivSearch"
                app:layout_constraintEnd_toStartOf="@id/ivSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivSearch" />

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/icon_image"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuote" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/categories"
                android:textColor="@color/light_primary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivSearch" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCategories"
                app:tabBackground="@color/dark_primary"
                app:tabIndicatorColor="@color/dark_secondary"
                app:tabTextColor="@color/light_primary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tlCategories"
                tools:itemCount="2"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/tvLoadMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="38dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/load_more"
                android:textColor="@color/light_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvMovies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llWatchList"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bg_radius_16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/watch_list"
            android:textColor="@color/dark_primary"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/ic_bookmark"
            android:backgroundTint="@color/dark_primary"
            android:contentDescription="@string/icon_watch_list" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
