<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="18dp">

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:contentDescription="@string/poster_image"
        android:src="@drawable/bg_radius_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ivBookmark"
        app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/title"
            android:textColor="@color/light_primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:lines="1"
            android:textColor="@color/light_primary"
            android:textSize="12sp"
            tools:text="Spiderman No Way Home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/release_date"
            android:textColor="@color/light_primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:lines="1"
            android:textColor="@color/light_primary"
            android:textSize="12sp"
            tools:text="Spiderman No Way Home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/light_primary"
            android:textSize="12sp"
            android:text="@string/average_rating" />

        <TextView
            android:id="@+id/tvAverageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:lines="1"
            android:textColor="@color/light_primary"
            android:textSize="12sp"
            tools:text="Spiderman No Way Home" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivBookmark"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/icon_bookmark"
        android:background="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivRate"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/ic_rate_before"
        android:contentDescription="@string/icon_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBookmark" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:lines="1"
        android:gravity="center_horizontal"
        android:text="@string/_0_0"
        android:textColor="@color/light_primary"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/ivRate"
        app:layout_constraintStart_toStartOf="@+id/ivRate"
        app:layout_constraintTop_toBottomOf="@+id/ivRate" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_radius_16dp_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>