<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.AboutMovieFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/overviews"
        android:textColor="@color/light_primary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvMovieOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:textColor="@color/light_primary"
        android:textSize="12sp"
        tools:text="From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences." />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/release_date"
        android:textColor="@color/light_primary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvMovieReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:lines="1"
        android:textColor="@color/light_primary"
        android:textSize="12sp"
        tools:text="2021-12-17" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/average_rating"
                android:textColor="@color/light_primary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvAverageRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:lines="1"
                android:textColor="@color/light_primary"
                android:textSize="12sp"
                tools:text="9.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/rate_count"
                android:textColor="@color/light_primary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvRateCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins"
                android:lines="1"
                android:textColor="@color/light_primary"
                android:textSize="12sp"
                tools:text="1466" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/popularity"
        android:textColor="@color/light_primary"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvMoviePopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:lines="1"
        android:textColor="@color/light_primary"
        android:textSize="12sp"
        tools:text="48.261451" />

</LinearLayout>