<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivMovieBackDrop"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:contentDescription="@string/background_movie"
        android:src="@drawable/bg_radius_bottom_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/poster_image"
        android:src="@drawable/bg_radius_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivMovieBackDrop" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/light_primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/ivMoviePoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivMoviePoster"
        app:layout_constraintTop_toBottomOf="@id/ivMovieBackDrop"
        tools:text="Spiderman: No Way Home" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@id/ivMoviePoster"
        app:layout_constraintTop_toBottomOf="@id/ivMoviePoster"
        tools:itemCount="1" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlMenuDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvGenres"
        app:tabBackground="@color/dark_primary"
        app:tabIndicatorColor="@color/dark_secondary"
        app:tabTextColor="@color/light_primary" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/rvMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/llBookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlMenuDetail"
        tools:itemCount="2" />

    <LinearLayout
        android:id="@+id/llBack"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bg_radius_16dp"
        android:backgroundTint="@color/dark_secondary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/light_primary"
            android:contentDescription="@string/icon_watch_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/watch_list"
            android:textColor="@color/light_primary"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBookmark"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/bg_radius_16dp"
        android:backgroundTint="@color/dark_secondary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_bookmark"
            android:backgroundTint="@color/light_primary"
            android:contentDescription="@string/icon_watch_list" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
